Fix image alignment

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,6 +30,7 @@ body {
   position: relative;
   z-index: 10;
   width: 100%;
+  @include breakpoint($very-large) { height: 5vh; }
 
   > span {
     font-size: 1rem;
@@ -79,6 +80,14 @@ body {
 
     @include breakpoint($large) {
       width: 50vw;
+    }
+
+    @include breakpoint($very-large) {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      height: 95vh;
     }
   }
 }
@@ -174,6 +183,7 @@ body {
     @include breakpoint($large) {
       height: 100vh;
       overflow: auto;
+      padding: 8vh 50px 5vh;
     }
 
     @include breakpoint($very-large) {
@@ -236,7 +246,10 @@ body {
   color: rgba(black, .7);
   letter-spacing: .6px;
   text-align: center;
-  @include breakpoint($large) { text-align: left; }
+  @include breakpoint($large) {
+    text-align: left;
+    margin-top: 50px;
+  }
 
   &:hover {
     color: rgba(black, 1);
